tests/macros/order_select/validate_on_key.rs
fn main() {
    requestty::questions![OrderSelect {
        validate_on_key: todo!()
    }];
}
